Evalution/AProVE/recursion/Incorrect_Cyclic_Invoking_2_NT.c.txt
timeout 900 ./AProVE.sh -m wst --bit-width 64 Incorrect_Cyclic_Invoking_2_NT.c
 
 
-------------------------------------------------------------------------------------------------------
 
 
testfile: Incorrect_Cyclic_Invoking_2_NT.c
MAYBE
proof of /home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c
# AProVE Commit ID: 249ab60e2b58fea5661f104665226199f0baff7b jera 20211103 unpublished


Termination of the given C Problem could not be shown:

(0) C Problem


----------------------------------------

(0)
Obligation:
c file /home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c:98:25: warning: implicit declaration of function '__VERIFIER_nondet_uint' is invalid in C99 [-Wimplicit-function-declaration]
    unsigned int addr = __VERIFIER_nondet_uint();
                        ^
/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c:100:5: error: use of undeclared identifier 'ompa2'
    ompa2.revision = __VERIFIER_nondet_uint();
    ^
/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c:101:5: error: use of undeclared identifier 'ompa2'
    ompa2.config = __VERIFIER_nondet_uint();
    ^
/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Cyclic_Invoking_2_NT.c:102:5: error: use of undeclared identifier 'ompa2'
 
